fixed loader overlapping everything

--- a/src/app/frame/loader/loader.component.scss
+++ b/src/app/frame/loader/loader.component.scss
@@ -43,7 +43,7 @@
 
 .loader-container {
   transition: height 0.8s ease;
-  z-index: 2000;
+  z-index: 15;
 }
 
 .main-container {
